force-app/main/default/objects/FIN_Context__c/FIN_Context__c.object-meta.xml
<CustomObject>
    <label>Context</label>
    <nameField>
        <label>Context Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contexts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>