force-app/main/default/objects/FIN_Context__c/fields/Context_ID__c.field-meta.xml
<CustomField>
    <fullName>Context_ID__c</fullName>
    <label>Context ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>