force-app/main/default/objects/FIN_Context__c/fields/FIN_Account__c.field-meta.xml
<CustomField>
    <fullName>FIN_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contexts</relationshipLabel>
    <relationshipName>Contexts</relationshipName>
    <type>Lookup</type>
</CustomField>