force-app/main/default/objects/FIN_Context__c/fields/FIN_Current_Schema__c.field-meta.xml
<CustomField>
    <fullName>FIN_Current_Schema__c</fullName>
    <label>Current Schema</label>
    <length>250</length>
    <type>Text</type>
</CustomField>