force-app/main/default/objects/FIN_Context__c/fields/FIN_Payment_Type_Channel__c.field-meta.xml
<CustomField>
    <fullName>FIN_Payment_Type_Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Type Channel</label>
    <referenceTo>FIN_Payment_Type_Channel__c</referenceTo>
    <relationshipLabel>Contexts</relationshipLabel>
    <relationshipName>Contexts</relationshipName>
    <type>Lookup</type>
</CustomField>