force-app/main/default/objects/FIN_Context__c/fields/FIN_Test__c.field-meta.xml
<CustomField>
    <fullName>FIN_Test__c</fullName>
    <label>Test</label>
    <length>1</length>
    <type>Text</type>
</CustomField>