force-app/main/default/objects/FIN_Context__c/fields/isIncludedInBackfill__c.field-meta.xml
<CustomField>
    <fullName>isIncludedInBackfill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isIncludedInBackfill</label>
    <type>Checkbox</type>
</CustomField>