force-app/main/default/objects/FIN_Context__c/recordTypes/FIN_Context_Inactivated.recordType-meta.xml
<RecordType>
    <fullName>FIN_Context_Inactivated</fullName>
    <active>true</active>
    <label>Inactivated</label>
</RecordType>