force-app/main/default/objects/FIN_Context__c/recordTypes/FIN_UK.recordType-meta.xml
<RecordType>
    <fullName>FIN_UK</fullName>
    <active>true</active>
    <description>UK Context Record Type</description>
    <label>UK</label>
</RecordType>