force-app/main/default/objects/FIN_Context__c/recordTypes/SWE.recordType-meta.xml
<RecordType>
    <fullName>SWE</fullName>
    <active>true</active>
    <description>SWE Context Record Type</description>
    <label>SWE</label>
</RecordType>