force-app/main/default/objects/FIN_Context__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Short_Name__c</columns>
    <columns>FIN_Current_Schema__c</columns>
    <columns>FIN_StartDate__c</columns>
    <columns>FIN_EndDate__c</columns>
    <columns>FIN_Status__c</columns>
    <columns>FIN_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>